--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -97,6 +97,9 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	box-sizing: border-box;
+	min-height: 100%;
+	padding-bottom: 90px;
 }
 
 section {
@@ -127,6 +130,10 @@ footer {
 	padding: 20px;
 	color: #fff;
 	text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+	right: 0;
 }
 
 form {
