--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,9 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	box-sizing: border-box;
+	min-height: 100%;
+	padding-bottom: 90px;
 }
 
 section {
@@ -122,6 +125,8 @@ footer {
 	padding: 20px;
 	color: #fff;
 	text-align: center;
+    height: 80px;
+	margin-top: -80px;
 }
 
 form {
