--- a/timeline/styles/styles.css
+++ b/timeline/styles/styles.css
@@ -228,8 +228,10 @@ footer {
 	padding: 20px;
 	color: #fff;
 	text-align: center;
-    height: 80px;
-	margin-top: -80px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+	right: 0;
 }
 
 form {
